# robot-connect

./: README.md
configs/: jetson.teleop.ini  lekiwi.teleop.ini
plugins/earth-rover/: CMakeLists.txt  README.md  teleop_ctrl_earthrover.cc  teleop_media_earthrover.cc
plugins/include/: teleop_ctrl_plugin.h  teleop_media_plugin.h
plugins/jetson/: CMakeLists.txt  README.md  jetson.teleop.ini  teleop_ctrl_common.cc  teleop_media_gst.cc
plugins/lekiwi/: CMakeLists.txt  README.md  teleop_ctrl_zmq.cc  teleop_media_gst.cc  teleoperate.py
plugins/xlerobot/: 99_2xlerobot_teleop_keyboard.py  99_xlerobot_teleop_keyboard.py  CMakeLists.txt  README.md  teleop_ctrl_xlerobot.cc  teleop_media_xlerobot.cc
plugins/xlerobot/frodobots/: debug.sh  teleop.ini  teleop.sh  teleop_agent
plugins/xlerobot/frodobots/cert/: cert.pem  priv.pem  pub.pem
robots/: jetson.md  lekiwi.md
